[tool.poetry]
name = "drone-utils"
version = "0.0.0"
description = ""
authors = ["Aleksey Ploskov"]
license = "MIT"
readme = "README.md"
packages = [{include = "drone_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pymavlink = "^2.4.40"
mavproxy = "^1.8.66"

[tool.poetry.scripts]
ap-lua = "drone_utils.run_lua_script:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
